TestSuite/Syntax/Errors/UnixTime1.tjp
project epoch "Epoch" "1.0" 1971-01-01 2037-01-01 

task t "Task" {
	start 1971-01-01
}

